syntax = "proto3";

package configuration.typology;

message Workflow {
  double alert_threshold = 1;
  optional double interdiction_threshold = 2;
}

message TypologyRuleWeight {
  string ref = 1;
  int64 weight = 2;
  string id = 3;
  string version = 4;
}

message TypologyRule {
  string id = 1;
  string version = 2;
  string ref = 3;
}

message TypologyExpression {
  string operator = 1;
  repeated TypologyRule terms = 2;
  optional TypologyExpression expression = 3;
}

message TypologyConfiguration {
  string id = 1;
  string description = 2;
  string version = 3;
  Workflow workflow = 4;
  repeated TypologyRuleWeight rules = 5;
  TypologyExpression expression = 6;
}

message TypologyConfigurationRequest {
  string id = 1;
  string version = 2;
}

message GetTypologyConfigResponse {
  optional TypologyConfiguration configuration = 1;
}

service QueryTypologies {
  rpc GetTypologyConfiguration (TypologyConfigurationRequest) returns (GetTypologyConfigResponse);
}

service MutateTypologies {
  rpc CreateTypologyConfiguration (TypologyConfiguration) returns (TypologyConfiguration);
}
