syntax = "proto3";

package iso20022.payload;

import "proto/iso20022/pacs.008.001.12.proto";
import "proto/iso20022/pacs.002.001.12.proto";
import "google/protobuf/timestamp.proto";

message Payload {
  oneof transaction {
    iso20022.pacs008.Pacs008Document pacs008 = 1;
    iso20022.pacs002.Pacs002Document pacs002 = 2;
  }
  DataCache data_cache = 3;
}

message DataCache {
  string cdtr_id = 1;
  string dbtr_id = 2;
  string dbtr_acct_id = 3;
  string cdtr_acct_id = 4;
  google.protobuf.Timestamp cre_dt_tm = 5;
  iso20022.pacs008.ActiveOrHistoricCurrencyAndAmount instd_amt = 6;
  iso20022.pacs008.ActiveCurrencyAndAmount intr_bk_sttlm_amt = 7;
  optional double xchg_rate = 8;
}
