syntax = "proto3";

package pseudonyms;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message AccountHolder {
  string entity_id = 1;
  string account_id = 2;
  google.protobuf.Timestamp cre_dt_tm = 3;
}
